--- a/libraries/provision/ansible/playbooks/tasks/block-http-ports.yml
+++ b/libraries/provision/ansible/playbooks/tasks/block-http-ports.yml
@@ -6,6 +6,10 @@
     shell: iptables -I OUTPUT -p tcp -m multiport --dport {{ port }} -j DROP
     when: iptablesrules|length >= 1
 
+  - name: BLOCKPORTS | install iptables-services
+    shell: yum -y install iptables-services
+    when: iptablesrules|length >= 1 and (ansible_distribution == "CentOS" or ansible_distribution == "RedHat" or ansible_distribution == "Amazon")
+
   - name: BLOCKPORTS | save iptables after dropping
     shell: service iptables save
     when: iptablesrules|length >= 1
